<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.igis.ib</groupId>
  <artifactId>ib-ua-tax-declaration</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>ib-ua-tax-declaration</name>
  <description>InteractiveBrokers Ukraine Tax Declaration</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <java.version>11</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.beust</groupId>
      <artifactId>jcommander</artifactId>
      <version>1.81</version>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.3.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.activation</groupId>
      <artifactId>jakarta.activation</artifactId>
      <version>1.2.1</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.12.2</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>2.12.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>xmlgraphics-commons</artifactId>
      <version>2.4</version>
    </dependency>
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>fop</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.16</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.xmlunit</groupId>
      <artifactId>xmlunit-core</artifactId>
      <version>2.8.2</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>11</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.0</version>
          <configuration>
            <argLine>--illegal-access=permit</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>jaxb2-maven-plugin</artifactId>
          <version>2.5.0</version>
          <dependencies>
            <dependency>
              <groupId>org.glassfish.jaxb</groupId>
              <artifactId>jaxb-xjc</artifactId>
              <version>2.3.2</version>
            </dependency>
            <dependency>
              <groupId>com.sun.activation</groupId>
              <artifactId>jakarta.activation</artifactId>
              <version>1.2.1</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jaxb2-maven-plugin</artifactId>
        <configuration>
          <laxSchemaValidation>true</laxSchemaValidation>
          <clearOutputDir>false</clearOutputDir>
        </configuration>
        <executions>
          <execution>
            <id>generate-ib-flex-classes</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/main/schema/ib/ib-flex.xsd</source>
              </sources>
              <xjbSources>
                <xjbSource>src/main/schema/ib/ib-flex.xjb</xjbSource>
              </xjbSources>
            </configuration>
          </execution>
          <execution>
            <id>generate-tax-declaration-F0100211-classes</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/main/schema/tax/F0100211.xsd</source>
              </sources>
              <xjbSources>
                <xjbSource>src/main/schema/tax/F0100211.xjb</xjbSource>
              </xjbSources>
            </configuration>
          </execution>
          <execution>
            <id>generate-tax-declaration-F0121211-classes</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/main/schema/tax/F0121211.xsd</source>
              </sources>
              <xjbSources>
                <xjbSource>src/main/schema/tax/F0121211.xjb</xjbSource>
              </xjbSources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/jaxb</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
